Add Wallarm Tab in Domain Config Page

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -204,8 +204,10 @@
   <script type="text/javascript" src="js/portal/shared/validators/validate-query-strings-options.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-url-json-file.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-uniqueness-in-array-notification-lists.directive.js"></script>
+  <script type="text/javascript" src="js/portal/shared/validators/validate-uniqueness-in-array-wallarm-location-list.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-uniqueness-in-array.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-waf-location-name.directive.js"></script>
+  <script type="text/javascript" src="js/portal/shared/validators/validate-wallarm-location-name.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-wildcard-domain-field.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-domain-name-or-url.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-domain-name-regular-or-wildcard.directive.js"></script>
@@ -298,6 +300,7 @@
   <script type="text/javascript" src="js/portal/domains/domain-select/domainSelect.directive.js"></script>
   <script type="text/javascript" src="js/portal/domains/domain-the-third-party-links/domainTheThirdPartyLinks.directive.js"></script>
   <script type="text/javascript" src="js/portal/domains/domain-waf-locations/domainWafLocations.directive.js"></script>
+  <script type="text/javascript" src="js/portal/domains/domain-wallarm-waf/domainWallarmWaf.directive.js"></script>
   <script type="text/javascript" src="js/portal/domains/domain-waf-rules/domainWafRules.directive.js"></script>
   <script type="text/javascript" src="js/portal/domains/domain-waf-actions-list/domainWafActionsList.directive.js"></script>
 
@@ -560,13 +563,13 @@
   <script type="text/javascript" src="js/portal/waf-analytics/filters/wafFilterTops.directive.js"></script>
   <script type="text/javascript" src="js/portal/waf-analytics/filters/wafFilterTopObjects.directive.js"></script>
   <!-- //WAF Analytics -->
-  <!-- Notifications  -->
+  <!-- Notification Lists  -->
   <script type="text/javascript" src="js/portal/notifications/notifications.module.js"></script>
   <script type="text/javascript" src="js/portal/notifications/notifications.routes.js"></script>
   <script type="text/javascript" src="js/portal/notifications/controller/notificationLists.controller.js"></script>
   <script type="text/javascript" src="js/portal/notifications/account-notification-lists/accountNotificationLists.directive.js"></script>
   <script type="text/javascript" src="js/portal/notifications/notification-list/notificationList.directive.js"></script>
-  <!-- // Notifications -->
+  <!-- // Notification Lists -->
   <script type="text/javascript" src="js/portal/app.module.js"></script>
   <script type="text/javascript" src="js/portal/app.config.js"></script>
   <script type="text/javascript" src="js/portal/app.routes.js"></script>
