--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -41,11 +41,11 @@
 <!-- message for validate-wallarm-location-name  -->
 <div ng-message="wallarm-location-name" class="alert-text alert-text--wallarm-location-name">Incorrect Wallarm Location name format</div>
 <!-- message for validate-uniqueness-in-array  -->
-<div ng-message="uniqueness-in-array" class="alert-text alert-text--uniqueness-in-array">The WAF Location name must be uniqueness </div>
+<div ng-message="uniqueness-in-array" class="alert-text alert-text--uniqueness-in-array">The WAF Location name must be unique </div>
 <!-- message for validate-uniqueness-in-array-notification-lists -->
-<div ng-message="uniqueness-in-array-notification-lists" class="alert-text alert-text--uniqueness-in-array-notification-lists">The Notification List name must be uniqueness </div>
+<div ng-message="uniqueness-in-array-notification-lists" class="alert-text alert-text--uniqueness-in-array-notification-lists">The Notification List name must be unique </div>
 <!-- message for validate-uniqueness-in-array-wallarm-location-list -->
-<div ng-message="uniqueness-in-array-wallarm-location-list" class="alert-text alert-text--uniqueness-in-array-wallarm-location-list">The Wallarm location name must be uniqueness </div>
+<div ng-message="uniqueness-in-array-wallarm-location-list" class="alert-text alert-text--uniqueness-in-array-wallarm-location-list">The Wallarm location name must be unique </div>
 <!-- message for validate-cidr-format -->
 <div ng-message="cidr-format" class="alert-text alert-text--cidr-format">Please use correct CIDR format (for example, 8.8.8.8/32 or 4.4.4.0/24)</div>
 <!-- message for validate-acl-rule-header-name  -->
