--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -55,4 +55,4 @@
 <!-- message for validate-github-personal-access-token  -->
 <div ng-message="github-personal-access-token" class="alert-text alert-text--github-personal-access-token">Incorrect GitHub Personal Access Token format</div>
 <!-- message for validate-url-json-file  -->
-<div ng-message="url-json-file" class="alert-text alert-text--url">Incorrect URL string format for load JSON file</div>
+<div ng-message="url-json-file" class="alert-text alert-text--url">Incorrect URL string format for the JSON file</div>
