--- a/code/dev/parts/modal/confirmDelete.html
+++ b/code/dev/parts/modal/confirmDelete.html
@@ -2,7 +2,7 @@
   <h3 class="modal-title">Please confirm action</h3>
 </div>
 <div class="modal-body">
-  Are you sure you want delete object ?
+  Are you sure you want to delete the object ?
 </div>
 <div class="modal-footer">
   <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
