--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -307,7 +307,7 @@
                       {{co_bypass_locations}}
                     </ui-select-choices>
                   </ui-select>
-                  <label for="co_bypass_locations" class="text-info" popover-trigger="mouseenter" uib-popover="Normally as we serve the website’s requests they will pass via two sets of our proxy servers: so called last-mile (edge) servers which are located close to end users and so-called first-mile servers located close to the customer’s origin server. Sometimes it might be required to force the system to do not use first-mile servers, and you can use the configuration field to specify for which locations of the website the edge proxies will need to communicate directly with the origin server instead of first-mile servers.">
+                  <label for="co_bypass_locations" class="text-info" popover-trigger="mouseenter" uib-popover="Normally as we serve the website’s requests they will pass via two sets of our proxy servers: so called last-mile (edge) servers which are located close to end users and so called first-mile servers located close to the customer’s origin server. Sometimes it might be required to force the system to do not use first-mile servers, and you can use the configuration field to specify for which locations of the website the edge proxies will need to communicate directly with the origin server instead of first-mile servers.">
                     <i class="fa fa-question-circle"></i>
                   </label>
                   <div class="error-messages" ng-messages="editForm.coBypassLocations.$error" role="alert" ng-messages-multiple>
