--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -275,7 +275,7 @@
                 <div class="col-sm-8">
                   <toggle-switch name="useContactInfoAsBillingInfo" ng-model="model.use_contact_info_as_billing_info" on-label="Yes" off-label="No">
                   </toggle-switch>
-                  <label for="useContactInfoAsBillingInfo" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text text-info">
+                  <label for="useContactInfoAsBillingInfo" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Use the company contact information as billing contact details as well">
                     <i class="fa fa-question-circle"></i>
                   </label>
                 </div>
